--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="randomizer20">click</button>
     
     <!--Use this template to create an N sided die
-    NOTICE: uncomment and replace N with an integer before use
+    NOTICE: uncomment and replace N with an integer before use.
     
     <h2>D[N]</h2>
     <h1 id="displayN">00</h1>
